# icub_whole_body_task_controller

./: CMakeLists.txt  README.md  main.cpp
AnticipatoryController/include/: ComPredictionModels.h  ComRefGenerator.h  FeedForwardController.h  MPCOptimization.h  anticipatory_ctrl.h
AnticipatoryController/src/: ComPredictionModels.cpp  ComRefGenerator.cpp  FeedForwardController.cpp  MPCOptimization.cpp  anticipatory_ctrl.cpp
BimanualControllers/include/: BimanualCooperativeController.h  BimanualFreeMotionController.h  GraspingConstraints.h  Manipulation.h
BimanualControllers/src/: BimanualCooperativeController.cpp  BimanualFreeMotionController.cpp  GraspingConstraints.cpp  Manipulation.cpp
LearnedModels/gmm/: hands_com_task2_mu.txt  hands_com_task2_prio.txt  hands_com_task2_sigma.txt  hands_com_task_mu.txt  hands_com_task_prio.txt  hands_com_task_sigma.txt
LearnedModels/pca/: com_task_Ap.txt  com_task_mu.txt  hands_task_Ap.txt  hands_task_mu.txt
Robot/include/: RobotInterface.h  WbRobotModel.h  ioStateManager.h
Robot/src/: RobotInterface.cpp  WbRobotModel.cpp  ioStateManager.cpp
auxiliary/: CMakeLists.txt  main.cpp  main_1.cpp
auxiliary/IMU/src/: IMU.cpp
auxiliary/StepsGenerator/include/: CpDesiredFeetTransformations.h  CpMath_Utilities.h  InitBalWlkParameters.h  MPCOptimizer.h  PatternsGenerator.h  StatesCompensators.h  TemplateModels.h
auxiliary/StepsGenerator/src/: InitBalWlkParameters.cpp  MPCOptimizer.cpp  PatternsGenerator.cpp  StatesCompensators.cpp  TemplateModels.cpp
auxiliary/aux_and_IK/IKD/include/: Model.h
auxiliary/aux_and_IK/IKD/src/: Contacts.cpp  IK.cpp  Model.cpp
auxiliary/aux_and_IK/wrapper/include/: wrapper.h
auxiliary/aux_and_IK/wrapper/src/: wrapper.cpp
auxiliary/include/: SteppingController.h  StepsGenerator.h  WlkData_logging.h
auxiliary/include_old/: StepperThread.h  StepperThread.txt  SteppingController.h  StepsGenerator.h  WlkData_logging.h  auxiliary_functions.h  wbhpidcUtilityFunctions.hpp
auxiliary/src/: SteppingController.cpp  StepsGenerator.cpp  WlkData_logging.cpp
auxiliary/src_old/: StepperThread.cpp  StepperThread.txt  SteppingController.cpp  StepsGenerator.cpp  WlkData_logging.cpp  auxiliary_functions.cpp
config/: wholeBodyHPIDControl.ini  yarpWholeBodyInterface.ini
include/: BalanceReference.h  BimanualCoordinationTasks.h  ControllerParameters.h  ConvexHullofPoints.hpp  IK_legs_Solver.hpp  Object_to_Grasp.hpp  Quaternions.h  TasksReferences.h  WBData_logging.h  WholeBodyTasksControlModule.h  wbhpidcUtilityFunctions.hpp
src/: BalanceReference.cpp  BimanualCoordinationTasks.cpp  ControllerParameters.cpp  Quaternions.cpp  TasksReferences.cpp  WBData_logging.cpp  WholeBodyTasksControlModule.cpp
wbID/include/: InverseDynamics.h  WholeBodyConstraints.h
wbID/src/: InverseDynamics.cpp  WholeBodyConstraints.cpp
wbIK/CoMclp_cvxgen/: CoMclp_description.cvxgen  CoMclp_ldl.c  CoMclp_matrix_support.c  CoMclp_solver.c  CoMclp_solver.h  CoMclp_testsolver.c  CoMclp_util.c
wbIK/include/: wb_InverseKinematics.h
wbIK/legIK_cvxgen/: legIK_description.cvxgen  legIK_ldl.c  legIK_matrix_support.c  legIK_solver.c  legIK_solver.h  legIK_testsolver.c  legIK_util.c
wbIK/src/: wb_InverseKinematics.cpp
wbIK/wbIK1_cvxgen/: wbIK1_description.cvxgen  wbIK1_ldl.c  wbIK1_matrix_support.c  wbIK1_solver.c  wbIK1_solver.h  wbIK1_testsolver.c  wbIK1_util.c
wbIK/wbIK2_cvxgen/: wbIK2_description.cvxgen  wbIK2_ldl.c  wbIK2_matrix_support.c  wbIK2_solver.c  wbIK2_solver.h  wbIK2_testsolver.c  wbIK2_util.c
wbIK/wbIK3_cvxgen/: wbIK3_description.cvxgen  wbIK3_ldl.c  wbIK3_matrix_support.c  wbIK3_solver.c  wbIK3_solver.h  wbIK3_testsolver.c  wbIK3_util.c
wbIK/wbIK4_cvxgen/: wbIK4_description.cvxgen  wbIK4_ldl.c  wbIK4_matrix_support.c  wbIK4_solver.c  wbIK4_solver.h  wbIK4_testsolver.c  wbIK4_util.c
wbIK/wbIK_cvxgen/: wbIK_description.cvxgen  wbIK_ldl.c  wbIK_matrix_support.c  wbIK_solver.c  wbIK_solver.h  wbIK_testsolver.c  wbIK_util.c
wbQPSolvers/bwc_cvxgen_maxnF00/: bwc_description.cvxgen  bwc_ldl.c  bwc_matrix_support.c  bwc_solver.c  bwc_solver.h  bwc_testsolver.c  bwc_util.c
wbQPSolvers/cmo_cvxgen/: cmo_description.cvxgen  cmo_ldl.c  cmo_matrix_support.c  cmo_solver.c  cmo_solver.h  cmo_testsolver.c  cmo_util.c
wbQPSolvers/com_cvxgen/: com_description.cvxgen  com_ldl.c  com_matrix_support.c  com_solver.c  com_solver.h  com_testsolver.c  com_util.c
wbQPSolvers/cop_cvxgen/: cop_ldl.c  cop_matrix_support.c  cop_solver.c  cop_solver.h  cop_testsolver.c  cop_util.c
wbQPSolvers/cvxgen_solver_wb/: Makefile  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
wbQPSolvers/cvxgen_solver_wbChest00/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
wbQPSolvers/cvxgen_solver_wb_00/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
wbQPSolvers/cvxgen_solver_wb_01/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
wbQPSolvers/cvxgen_solver_wb_Works00/: Makefile  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
wbQPSolvers/cvxgen_solver_wb_X/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
wbQPSolvers/wb2_cvxgen/: wb2_description.cvxgen  wb2_ldl.c  wb2_matrix_support.c  wb2_solver.c  wb2_solver.h  wb2_testsolver.c  wb2_util.c
